# protoc-gen-axum-connect

./: Cargo.toml  README.md
src/: core.rs  generator.rs  lib.rs  main.rs  resolver.rs  serde_gen.rs  service.rs  util.rs
