[package]
name = "protoc-gen-axum-connect"
version = "0.1.0"
authors = ["Yaroslav Stolbunov <yaroher2442@gmail.com>"]
description = "Protocol Buffers compiler plugin for axum-connect services"
repository = "https://github.com/yaroher/protoc-gen-axum-connect"
homepage = "https://github.com/yaroher/protoc-gen-axum-connect"
documentation = "https://docs.rs/protoc-gen-axum-connect"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost", "axum", "connect"]
categories = ["encoding"]
exclude = ["proto"]

[dependencies]
pbjson-build = "0.7.0"
proc-macro2 = "1.0.103"
prost-build = ">=0.13,<0.14"
prost-types = "0.13.5"
prost = ">=0.13,<0.14"
protoc-gen-prost = { version = "0.5.0"}
quote = "1.0.42"
syn = { version = "2.0.109", features = ["parsing", "full"] }
